kubernetes/k8s-nodejs-app/k8sConfigs/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 3000
  ingressClassName: nginx
